src/test/ui/traits-multidispatch-convert-ambig-dest.stderr
error[E0282]: type annotations needed
  --> $DIR/traits-multidispatch-convert-ambig-dest.rs:36:5
   |
36 |     test(22, std::default::Default::default());
   |     ^^^^ cannot infer type for `U`

error: aborting due to previous error

